--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,10 +68,10 @@
         </activity>
 
         <!-- LEGACY ACTIVITIES -->
-        <activity android:name=".views.StartActivity" >
+        <activity android:name=".views.legacy.StartActivity" >
 
         </activity>
-        <activity android:name=".views.MainActivity" >
+        <activity android:name=".views.legacy.MainActivity" >
 
         </activity>
     </application>
